2003-05-16  Bradley Bell  <btb@icculus.org>

	* include/physfsx.h: added my physfs extensions

	* main/inferno.c: physfs initialization stuff

	* main/polyobj.c: use cfilelength instead of file->size

	* configure.ac: add check for physfs lib

	* include/cfile.h: made cfile into a wrapper for physfs

	* main/mission.c, main/movie.c, main/newdemo.c, main/newmenu.c:
	disabled althogdir stuff (shouldn't be needed w/physfs)

	* Makefile.am, cfile/.cvsignore, cfile/Makefile.am, cfile/cfile.c,
	configure.ac: drop cfile stuff

0.2.4:

2003-05-12  Bradley Bell  <btb@icculus.org>

	* configure.ac: increment version number

	* main/bm.c: use con_printf for exit model warnings

	* configure.ac: must check for timespec after setting -mno-cygwin

	* main/inferno.c: added -nohogdir and -userdir options

	* NEWS, main/titles.c: use briefings with no extension

0.2.3:

2003-04-30  Bradley Bell  <btb@icculus.org>

	* configure.ac: have to include time.h when checking for nanosleep

	* configure.ac, libmve/mveplay.c: use autoconf to check for struct
	timespec

	* Makefile.am, NEWS, README, configure.ac: fix linking bug,
	increment version number

	* main/Makefile.am: make dist fix

0.2.2:

2003-04-29  Bradley Bell  <btb@icculus.org>

	* configure.ac, 2d/2dsline.c, main/automap.c, libmve/mveplay.c:
	fixes for OS X 10.2

2003-04-24  Bradley Bell  <btb@icculus.org>

	* configure.ac: increment version number

	* main/inferno.c: redeclare main() 'the SDL way', make sure SDL.h
	is always included.

2003-04-24  Ingo van Lil  <inguin@gmx.de>

	* main/render.c: fix misspellings of NDEBUG

0.2.1:

2003-04-14  Bradley Bell  <btb@icculus.org>

	* cfile/cfile.c: prefer files from d2 hog over d1 hog

2003-04-11  Bradley Bell  <btb@icculus.org>

	* main/automap.c, main/gamemine.c, main/menu.c: fix compiler
	warnings

0.2.0:

2003-04-11  Bradley Bell  <btb@icculus.org>

	* libmve/mveplay.c: use _sleep instead of sleep on win32

	* Makefile.am, README, README.utils, arch/sdl/digi.c,